--- a/worker/config.json
+++ b/worker/config.json
@@ -1,4 +1,7 @@
 {
-  "my_url": "hello",
-  "foreman_url": "woooo"
+  "my_url": "localhost",
+  "my_port": 5000,
+  "my_name": "1",
+  "foreman_url": "localhost",
+  "foreman_port": 8000
 }
